--- a/crates/optimism/payload/Cargo.toml
+++ b/crates/optimism/payload/Cargo.toml
@@ -55,9 +55,9 @@ sha2.workspace = true
 
 [features]
 optimism = [
-    "reth-optimism-evm/optimism",
-    "revm/optimism",
-    "reth-execution-types/optimism",
-    "reth-optimism-consensus/optimism",
-    "reth-optimism-primitives/optimism",
+	"reth-provider/optimism",
+	"reth-optimism-evm/optimism",
+	"reth-execution-types/optimism",
+	"reth-optimism-consensus/optimism",
+	"reth-optimism-primitives/optimism",
 ]
