--- a/crates/payload/primitives/Cargo.toml
+++ b/crates/payload/primitives/Cargo.toml
@@ -18,6 +18,8 @@ reth-errors.workspace = true
 reth-primitives.workspace = true
 reth-chain-state.workspace = true
 
+revm-context-interface.workspace = true
+
 # alloy
 alloy-eips.workspace = true
 alloy-primitives.workspace = true
